--- a/css/resumencompra.css
+++ b/css/resumencompra.css
@@ -11,6 +11,7 @@
   border-radius: 2px;
   padding-bottom: 10px;
   margin: 20px auto;
+  font-family: "Lato", sans-serif;
 }
 h3 {
   display: block;
